src/objects/Job_Posting_del__c.object
<CustomObject>
    <description>Represents the junction object between a position and an employment website</description>
    <fields>
        <fullName>Employment_Website__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employment Website</label>
        <referenceTo>Employment_Website__c</referenceTo>
        <relationshipLabel>Positions</relationshipLabel>
        <relationshipName>Job_Postings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Employment Websites</relationshipLabel>
        <relationshipName>Job_Postings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test1__c</fullName>
        <label>Test1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestField__c</fullName>
        <label>TestField</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Job Posting</label>
    <nameField>
        <displayFormat>JP-{00000}</displayFormat>
        <label>job Posting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Postings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>